# ml-playground

./: .gitignore  jupyter_notebook_config.py  pyproject.toml
.github/workflows/: dependabot-merge.yml
.jupyter/nbconfig/: edit.json  notebook.json
Basics/: bandit.py  epsilon-greedy.ipynb  gd-linear-regression.ipynb
Boston-Housing/: ann-3.ipynb
Dynamic-Programming/: evaluation.py  main.py  movement.py  policy.py  world.py
Evolution-Strategies/: evolution_strategies.py  null-point-search.ipynb
Human-Activity-Recognition/: LSTM.ipynb  get_data.py
Human-Activity-Recognition/data/: .gitignore
MNIST/: ann-3.ipynb  ann-ae.ipynb  ann-conv.ipynb  autoencoder.ipynb  classic-layered.ipynb  convolutional.ipynb  data.py  evolutional.ipynb
Reinforcement-Learning/: agent.py  dynamic_programming.py  evaluation.py  game.py  main.py  policy.py  util.py
Reinforcement-Learning/bipedal_walker/: main.py
Reinforcement-Learning/cart_pole/: agent.py  main.py  model.py
Reinforcement-Learning/environment/: world.py
Reinforcement-Learning/grid_world/: agent.py  dynamic_programming.py  game.py  main.py  policy.py  state_value.py  util.py
Reinforcement-Learning/grid_world/dp/: evaluation.py
Reinforcement-Learning/grid_world/environment/: movement.py  world.py
Reinforcement-Learning/mountain_car/: agent.py  main.py
basics/: bandit.py  epsilon-greedy.ipynb  optimistic-initial-values.ipynb  thompson-sampling-gaussian.ipynb  thompson-sampling.ipynb  upper-confidence-bound.ipynb
