[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Thomas Zub <thomas.zub@outlook.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "1.12.0"
torchvision = "0.13.0"
pandas = "^2.0.2"
scikit-learn = "^1.3"
tqdm = "^4.65.0"
gym = {version = "^0.26.2", extras = ["classic_control"]}

[tool.poetry.dev-dependencies]
jupyterlab = "^4.0.0"
matplotlib = "^3.7.1"
black = "23.3.0"
ipywidgets = "^8.0.6"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
