[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Thomas Zub <thomas.zub@outlook.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "1.12.0"
torchvision = "0.13.0"
pandas = "^2.0.2"
scikit-learn = "^1.2"
tqdm = "^4.65.0"
gym = {version = "^0.26.2", extras = ["classic_control"]}

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.0"
matplotlib = "^3.7.3"
ipywidgets = "^8.0.6"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
