[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Thomas Zub <thomas.zub@outlook.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "2.1.2"
torchvision = "0.16.2"
pandas = "2.1.4"
scikit-learn = "1.3.2"
tqdm = "4.66.1"
gym = {version = "0.26.2", extras = ["classic_control"]}

[tool.poetry.group.dev.dependencies]
jupyterlab = "4.0.10"
matplotlib = "3.8.2"
ipywidgets = "8.1.1"
ruff = "0.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
